[package]
name = "country-info"
version = "0.1.0"
authors = ["Md Tuser Sheikh <tuser.sheikh@zoho.com>"]
edition = "2018"
description = "Show basic country informations by country ISO code"

[dependencies]
clap = "2.33.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
